Wed Feb  2 10:31:13 2000  David A Helder  <dhelder@umich.edu>

	* doc/gnet.sgml: Fixed version number stuff, old function names.
	* src/udp.c: Fixed type in docs for get_iochannel.
	
	* debian/changelog: Did a 0.1.8-2 release with fixed
	    documentation. (I did not generate them properly 
	    when I did the first released).

Tue Feb  1 20:00:23 2000  David A Helder  <dhelder@umich.edu>

	* auto: Upped version to 0.1.8
	* Makefile.am (copyweb): Added debian server stuff to
	    copyweb rule.

Mon Jan 31 21:30:02 2000  David A Helder  <dhelder@umich.edu>

	* examples/.cvsignore: Added example executables.

Mon Jan 31 19:40:45 2000  David A Helder  <dhelder@umich.edu>
	
	* src/gnet-private.h: Added iochannel member to TcpSocket,
	    UdpSocket, McastSocket
	* src/{udp,tcp}.c: Use single iochannel.
	* examples/{hfetch, echoserver}.c: Don't close iochannel.
	
	* src/{udp,inetaddr,tcp,mcast}.c: Check if the argument to
	    *_delete is NULL.  If it is, don't do anything.
	
	* README: Added info on submiting bugs.  
	* TODO: Added "Write manpage for gnet-config".
	
Sun Jan 30 16:34:59 2000  David A Helder  <dhelder@umich.edu>

	* src/inetaddr.c (gnet_inetaddr_new_nonblock): Added 'return'
	    if inet_aton worked.  This caused a seg fault.
	* src/tcp.c (gnet_tcp_socket_new_nonblock): Added some
	    g_return_val_if_fail.
	* TODO: Reformated, added some comments.
	
2000-01-30  Soren Sandmann Pedersen  <sandmann@nerva.daimi.au.dk>

	* src/inetaddr.c: Use HP-UX' gethostbyaddr_r.  Fixed typo
	    in Solaris code (this was a bug - we were calling
	    gethostbyname_r, not gethostbyaddr_r) [DAH].
	
Sat Jan 29 16:55:41 2000  David A Helder  <dhelder@umich.edu>

	* AUTHORS: Added Soeren Sandmann to AUTHORS

2000-01-29  Soren Sandmann Pedersen  <sandmann@saratoga.daimi.au.dk>

	* src/inetaddr.c: Use HP-UX' gethostbyname_r
	* acconfig.h: add GETHOSTBYNAME_R_HPUX
	* configure.in: detect HP-UX' gethostbyname_r

Wed Jan 26 12:37:51 2000  David A Helder  <dhelder@umich.edu>
