@@ -37,8 +37,8 @@ copyweb:
 	-cp -f debian-temp/$(DEBFILE) debian-temp/$(DEBFILEDEV) $(WEBPATH)/deb
 	-cp -f $(RPMFILE) $(RPMFILEDEV) $(RPMFILESRC) $(WEBPATH)/rpm
 	-chmod a+r $(WEBPATH)/src/* $(WEBPATH)/deb/* $(WEBPATH)/rpm/*
-	-rm -f $(DEBPATH)/dists/unstable/main/binary-i386/lib/gnet*
-	-cp -f debian-temp/$(DEBFILE) $(DEBPATH)/dists/unstable/main/binary-i386/lib
+	-rm -f $(DEBPATH)/dists/unstable/main/binary-i386/libs/libgnet*
+	-cp -f debian-temp/$(DEBFILE) debian-temp/$(DEBFILEDEV) $(DEBPATH)/dists/unstable/main/binary-i386/libs
 	-(cd $(DEBPATH); ./setup.sh)
 
 deb:
